test/error/sem/redeclaration.tig
let
	var a:=1
	var a:=2
in
end
